--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./dist/server.js",
     "dev": "npx webpack --config webpack.config.dev.js",
+    "dev-w": "npx webpack --watch --config webpack.config.dev.js",
     "prod": "npx webpack --config webpack.config.prod.js"
   },
   "author": "",
@@ -16,6 +18,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.0",
+    "nodemon": "^1.19.1",
     "ts-loader": "^6.0.2",
     "tslint": "^5.17.0",
     "tslint-config-airbnb": "^5.11.1",
